[gd_scene load_steps=14 format=3 uid="uid://cqhrxq7iu7b7q"]

[ext_resource type="Texture2D" uid="uid://cte4uhv66ymbo" path="res://assets/textures/Save/save.png" id="1_eosj0"]
[ext_resource type="Script" path="res://scripts/scene/save.gd" id="1_ke5ar"]
[ext_resource type="Texture2D" uid="uid://b8k6hfspvteye" path="res://assets/textures/Save/nameplate_empty_normal.png" id="3_csaig"]
[ext_resource type="PackedScene" uid="uid://vpacb0pr6l3x" path="res://scenes/ui/SettingButton.tscn" id="3_ybaco"]
[ext_resource type="Texture2D" uid="uid://jasbd1idkca7" path="res://assets/textures/Save/nameplate_empty_pressed.png" id="4_178px"]
[ext_resource type="PackedScene" uid="uid://b57patcisbxpk" path="res://scenes/ui/BackButton.tscn" id="4_yvpgq"]
[ext_resource type="Texture2D" uid="uid://c754lcvmttlrd" path="res://assets/textures/Save/nameplate_empty_hover.png" id="5_mlho4"]
[ext_resource type="Texture2D" uid="uid://dogeki7qkeuue" path="res://assets/textures/Save/nameplate_fill_normal.png" id="6_pj3ya"]
[ext_resource type="Texture2D" uid="uid://c12jci80tpmv8" path="res://assets/textures/Save/nameplate_fill_pressed.png" id="7_tktx1"]
[ext_resource type="Texture2D" uid="uid://8c3jjtyjib3o" path="res://assets/textures/Save/nameplate_fill_hover.png" id="8_2hvd0"]
[ext_resource type="Texture2D" uid="uid://ieiwbp3mestl" path="res://assets/textures/Save/delete_normal.png" id="9_8hrxi"]
[ext_resource type="Texture2D" uid="uid://dga60mgpbcxya" path="res://assets/textures/Save/delete_pressed.png" id="10_0o03s"]
[ext_resource type="Texture2D" uid="uid://ccuj7vmqnwpm8" path="res://assets/textures/Save/delete_hover.png" id="11_hkjjh"]

[node name="Save" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ke5ar")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_eosj0")

[node name="SaveSlot1" type="Node" parent="."]

[node name="NamePlateEmpty" type="TextureButton" parent="SaveSlot1"]
offset_left = 163.0
offset_top = 249.0
offset_right = 772.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_csaig")
texture_pressed = ExtResource("4_178px")
texture_hover = ExtResource("5_mlho4")

[node name="NamePlateFill" type="TextureButton" parent="SaveSlot1"]
offset_left = 163.0
offset_top = 249.0
offset_right = 772.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_pj3ya")
texture_pressed = ExtResource("7_tktx1")
texture_hover = ExtResource("8_2hvd0")

[node name="Name" type="Label" parent="SaveSlot1/NamePlateFill"]
layout_mode = 0
offset_left = 78.0
offset_top = 98.0
offset_right = 518.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 43
text = "Name"
horizontal_alignment = 1

[node name="Chips" type="Label" parent="SaveSlot1/NamePlateFill"]
layout_mode = 0
offset_left = 150.0
offset_top = 196.0
offset_right = 436.0
offset_bottom = 255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Chips："
horizontal_alignment = 1

[node name="LastPlayed" type="Label" parent="SaveSlot1/NamePlateFill"]
layout_mode = 0
offset_left = 96.0
offset_top = 282.0
offset_right = 494.0
offset_bottom = 341.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "YYYY-mm-dd hh:mm:ss"
horizontal_alignment = 1

[node name="Delete" type="TextureButton" parent="SaveSlot1/NamePlateFill"]
layout_mode = 0
offset_left = 256.0
offset_top = 384.0
offset_right = 336.0
offset_bottom = 464.0
texture_normal = ExtResource("9_8hrxi")
texture_pressed = ExtResource("10_0o03s")
texture_hover = ExtResource("11_hkjjh")

[node name="SaveSlot2" type="Node" parent="."]

[node name="NamePlateEmpty" type="TextureButton" parent="SaveSlot2"]
offset_left = 476.0
offset_top = 249.0
offset_right = 1085.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_csaig")
texture_pressed = ExtResource("4_178px")
texture_hover = ExtResource("5_mlho4")

[node name="NamePlateFill" type="TextureButton" parent="SaveSlot2"]
offset_left = 476.0
offset_top = 249.0
offset_right = 1085.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_pj3ya")
texture_pressed = ExtResource("7_tktx1")
texture_hover = ExtResource("8_2hvd0")

[node name="Name" type="Label" parent="SaveSlot2/NamePlateFill"]
layout_mode = 0
offset_left = 78.0
offset_top = 98.0
offset_right = 518.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 43
text = "Name"
horizontal_alignment = 1

[node name="Chips" type="Label" parent="SaveSlot2/NamePlateFill"]
layout_mode = 0
offset_left = 150.0
offset_top = 196.0
offset_right = 436.0
offset_bottom = 255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Chips："
horizontal_alignment = 1

[node name="LastPlayed" type="Label" parent="SaveSlot2/NamePlateFill"]
layout_mode = 0
offset_left = 96.0
offset_top = 282.0
offset_right = 494.0
offset_bottom = 341.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "YYYY-mm-dd hh:mm:ss"
horizontal_alignment = 1

[node name="Delete" type="TextureButton" parent="SaveSlot2/NamePlateFill"]
layout_mode = 0
offset_left = 260.0
offset_top = 396.0
offset_right = 340.0
offset_bottom = 476.0
texture_normal = ExtResource("9_8hrxi")
texture_pressed = ExtResource("10_0o03s")
texture_hover = ExtResource("11_hkjjh")

[node name="SaveSlot3" type="Node" parent="."]

[node name="NamePlateEmpty" type="TextureButton" parent="SaveSlot3"]
offset_left = 788.0
offset_top = 249.0
offset_right = 1397.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_csaig")
texture_pressed = ExtResource("4_178px")
texture_hover = ExtResource("5_mlho4")

[node name="NamePlateFill" type="TextureButton" parent="SaveSlot3"]
offset_left = 788.0
offset_top = 249.0
offset_right = 1397.0
offset_bottom = 677.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_pj3ya")
texture_pressed = ExtResource("7_tktx1")
texture_hover = ExtResource("8_2hvd0")

[node name="Name" type="Label" parent="SaveSlot3/NamePlateFill"]
layout_mode = 0
offset_left = 78.0
offset_top = 98.0
offset_right = 518.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 43
text = "Name"
horizontal_alignment = 1

[node name="Chips" type="Label" parent="SaveSlot3/NamePlateFill"]
layout_mode = 0
offset_left = 150.0
offset_top = 196.0
offset_right = 436.0
offset_bottom = 255.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Chips："
horizontal_alignment = 1

[node name="LastPlayed" type="Label" parent="SaveSlot3/NamePlateFill"]
layout_mode = 0
offset_left = 96.0
offset_top = 282.0
offset_right = 494.0
offset_bottom = 341.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "YYYY-mm-dd hh:mm:ss"
horizontal_alignment = 1

[node name="Delete" type="TextureButton" parent="SaveSlot3/NamePlateFill"]
layout_mode = 0
offset_left = 252.0
offset_top = 394.0
offset_right = 332.0
offset_bottom = 474.0
texture_normal = ExtResource("9_8hrxi")
texture_pressed = ExtResource("10_0o03s")
texture_hover = ExtResource("11_hkjjh")

[node name="SettingButton" parent="." instance=ExtResource("3_ybaco")]
layout_mode = 1
offset_left = 1180.0
offset_top = 20.0
offset_right = 1220.0
offset_bottom = 60.0

[node name="BackButton" parent="." instance=ExtResource("4_yvpgq")]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0
